[gd_scene load_steps=7 format=3 uid="uid://q84l5pg8t6nv"]

[ext_resource type="Script" path="res://Scenes/loose_screen.gd" id="1_ijkm4"]
[ext_resource type="Theme" uid="uid://bcmjs0qer7m38" path="res://Fonts/MainFont.tres" id="2_lcexe"]

[sub_resource type="Animation" id="Animation_458ce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.780392, 0, 0.0588235, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_evc4u"]
resource_name = "transparency_shift"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.780392, 0, 0.0588235, 0), Color(0.780392, 0, 0.0588235, 0.501961)]
}

[sub_resource type="Animation" id="Animation_i5drf"]
resource_name = "EXPLOSION"
length = 1.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.1, 0.382696, 1, -0.075, -0.486119, 0.4, -0.00822872, 0.5, -0.6, 0.0172507, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 1.5)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"screen_obscured"],
"method": &"emit_signal"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Buttons/ViewGridButton")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"hide"
}, {
"args": [],
"method": &"show"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nif4w"]
_data = {
"RESET": SubResource("Animation_458ce"),
"fade_in": SubResource("Animation_evc4u"),
"impact": SubResource("Animation_i5drf")
}

[node name="LooseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ijkm4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
color = Color(0.780392, 0, 0.0588235, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
libraries = {
"": SubResource("AnimationLibrary_nif4w")
}

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_lcexe")

[node name="RetryButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.369792
anchor_top = 0.4
anchor_right = 0.614583
anchor_bottom = 0.534259
text = "Retry"
metadata/_edit_use_anchors_ = true

[node name="MainMenuButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.369792
anchor_top = 0.601852
anchor_right = 0.614583
anchor_bottom = 0.736111
offset_top = -6.10352e-05
text = "Main Menu"
metadata/_edit_use_anchors_ = true

[node name="ViewGridButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00677083
anchor_top = 0.881482
anchor_right = 0.19948
anchor_bottom = 0.987964
toggle_mode = true
action_mode = 0
text = "View Grid"
metadata/_edit_use_anchors_ = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="animation_finished" from="Background/AnimationPlayer" to="." method="_on_fade_animation_finished"]
[connection signal="animation_started" from="Background/AnimationPlayer" to="." method="_on_fade_animation_started"]
[connection signal="pressed" from="Buttons/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Buttons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="toggled" from="Buttons/ViewGridButton" to="." method="_on_view_grid_button_toggled"]
